--- a/.gitattributes
+++ b/.gitattributes
@@ -2,3 +2,6 @@
 * text=auto
 .mp3 filter=lfs diff=lfs merge=lfs -text
 .wav filter=lfs diff=lfs merge=lfs -text
+*.fbx filter=lfs diff=lfs merge=lfs -text
+*.glb filter=lfs diff=lfs merge=lfs -text
+*.obj filter=lfs diff=lfs merge=lfs -text
